# hapa

./: README.md  pyproject.toml  setup.cfg  setup.py
examples/: halos.ipynb
examples/.ipynb_checkpoints/: halos-checkpoint.ipynb
src/hapa/: __init__.py  cosmology.py  halo.py  params.py  power_spectrum.py  units.py
src/hapa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pyhapa/: __init__.py  halo.py
src/pyhapa.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
