[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhapa"
version = "0.0.1"
authors = [
  { name="Gaétan Facchinetti", email="gaetanfacc@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GPL 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gaetanfacchinetti/hapa.git"