[metadata]
name = hapa
version = 0.0.1
author = Gaétan Facchinetti
author_email = gaetanfacc@gmail.com
description = Halo Package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gaetanfacchinetti/hapa
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = package_name